# Python-projects

./: .gitignore  README.md  generate_email_name.py  num _to_words.py  pi_generator.py  rename_file.py  tictactoe.py  verify_password.py  word reverse.py
auto_complete_dictionary/: run.py
auto_complete_dictionary/dict/: __init__.py  views.py
auto_complete_dictionary/dict/templates/: index.html  layout.html  search.html
games/: blackjack.py  tictactoe.py
webapp/: docker-compose.yml
webapp/db/: put.sh
webapp/server/: Dockerfile  pyproject.toml
webapp/server/conf/: nginx.conf
webapp/server/webapp/: app.py
webapp/server/webapp/webapp/: app.py
webapp/server/webapp/webapp/templates/: index.html
